<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/order"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/review"
            android:title="@string/menu_review" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:title="@string/menu_log" />
    </group>
</menu>