<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.miniapp_restaurant.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.miniapp_restaurant.ui.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_review"
        android:name="com.example.miniapp_restaurant.ui.ReviewFragment"
        android:label="@string/menu_review"
        tools:layout="@layout/fragment_review" />
</navigation>